add csl file to yaml

--- a/manuscripts/supplement/similarity-matrices.Rmd
+++ b/manuscripts/supplement/similarity-matrices.Rmd
@@ -1,5 +1,7 @@
 ---
 bibliography: "../references.json"
+csl: "../apa-6th-edition.csl"
+
 output:
   bookdown::word_document2:
     reference_docx: "apa6_man.docx"
