use hyphen for figure ranges

--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -99,7 +99,7 @@ We estimated the cross spectral density between two signals $x$ and $y$ using mu
 
 The phase lag index takes values between 0 and 1. A value of 0 indicates either no phase coupling or phase coupling with a phase angle difference centred around 0 or 180 degrees, and a value of 1 indicates perfect phase coupling with a consistent nonzero phase angle difference. By only considering consistent nonzero phase angle differences as indicators of phase coupling between two sensors, the phase lag index ignores phase coupling that could be explained by volume conduction from a single common source (at the cost of also ignoring non-spurious zero lag coupling), making it a sound measure of the interactions between different underlying neural sources [@stametal_PhaseLagIndex_2007].
 
-Finally, to examine the sensitivity of our analyses to different spectral analysis approaches [cf. @bruns_FourierHilbertWaveletbased_2004], we also estimated the phase lag index using the Hilbert transform method [@stametal_PhaseLagIndex_2007]. The results of these analyses are shown in Figures A\@ref(fig:phase-similarity-plots-hilbert-delta) to A\@ref(fig:phase-similarity-plots-hilbert-gamma) in Appendix A.
+Finally, to examine the sensitivity of our analyses to different spectral analysis approaches [cf. @bruns_FourierHilbertWaveletbased_2004], we also estimated the phase lag index using the Hilbert transform method [@stametal_PhaseLagIndex_2007]. The results of these analyses are shown in Figures A\@ref(fig:phase-similarity-plots-hilbert-delta)-A\@ref(fig:phase-similarity-plots-hilbert-gamma) in Appendix A.
 
 ```{r rfftfreq, eval=FALSE}
 n_times <- 1000
@@ -192,7 +192,7 @@ We use similarity matrices to examine the similarities of functional connectomes
 
 We used a mixed beta regression to model how functional connectome similarity varied between and within individuals, sessions, and states at the group-level for each frequency band [for an accessible overview of mixed beta regression, see @doumaweedon_AnalysingContinuousProportions_2019; @heiss_GuideModelingProportions_2021]. The unit of observation was the pair of functional connectomes used for a given similarity estimate. The response variable was the RV coefficient estimated for each pair, which was modelled with a beta distribution and related to the predictors with the logit link function following the parameterization of @cribari-netozeileis_BetaRegression_2010 and @ferraricribari-neto_BetaRegressionModelling_2004. The predictors were binary indicators (where $0 = \textrm{No}$ and  $1 = \textrm{Yes}$) for whether a pair was within participant, within session, or within state, and their interactions. Because the RV coefficient estimates are based on the similarity of pairs of functional connectomes we accounted for statistical dependencies between observations by adding random intercepts to the model. All random effects were assumed to be normally distributed [@brooksetal_GlmmTMBBalancesSpeed_2017].
 
-We fit two versions of this model, which differed slightly in their random effects specification: A *maximal model* (@barretal_RandomEffectsStructure_2013) with random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common, and a random intercept for the participant pair to account for the repeated observation of the same participant pairs; and a *reduced model* with only random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from. The reduced models were fit for pragmatic reasons, due to convergence problems with several of the maximal models where the estimate for the variance of the participant pair parameter was zero (i.e., the fit was singular). The effect of not including participant pair was negligible for point estimates, which were similar or equivalent between models where it was and was not included; but was noticeable for interval estimates, which were generally wider by a factor of two to four when it was included compared to when it was not included. This difference did not meaningfully change the conclusions drawn from our results, however. Results from the reduced models are presented in the results section of this manuscript for parsimony across sections, and results from the maximal models are shown in Figures A\@ref(fig:phase-similarity-plots-maximal-theta) to A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma) in Appendix A.
+We fit two versions of this model, which differed slightly in their random effects specification: A *maximal model* (@barretal_RandomEffectsStructure_2013) with random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common, and a random intercept for the participant pair to account for the repeated observation of the same participant pairs; and a *reduced model* with only random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from. The reduced models were fit for pragmatic reasons, due to convergence problems with several of the maximal models where the estimate for the variance of the participant pair parameter was zero (i.e., the fit was singular). The effect of not including participant pair was negligible for point estimates, which were similar or equivalent between models where it was and was not included; but was noticeable for interval estimates, which were generally wider by a factor of two to four when it was included compared to when it was not included. This difference did not meaningfully change the conclusions drawn from our results, however. Results from the reduced models are presented in the results section of this manuscript for parsimony across sections, and results from the maximal models are shown in Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma) in Appendix A.
 
 The fit of the model was assessed using the following diagnostics: Posterior predictive checks---wherein we simulated replicated data under the fitted model and compared these to the observed data---were used to check for systematic differences between the fitted model and observed data [@gelmanetal_BayesianDataAnalysis_2013; @gelmanetal_RegressionOtherStories_2020; @gelmanhill_DataAnalysisUsing_2006]. Randomized quantile residuals plotted against uniform distribution quantiles were used to check for signs of model misspecification [@dunnsmyth_RandomizedQuantileResiduals_1996; @hartiglohse_DHARMaResidualDiagnostics_2022]. Quantiles of the random effects plotted against standard normal distribution quantiles were used to check if the random effects were normally distributed; however, generalized linear mixed effects models have a large degree of robustness against misspecifying the shape of the random effects distribution [see @mccullochneuhaus_MisspecifyingShapeRandom_2011]. Variance Inflation Factors were used to check for multicollinearity between the predictors [@foxmonette_GeneralizedCollinearityDiagnostics_1992; @marcoulidesraykov_EvaluationVarianceInflation_2019; @obrien_CautionRegardingRules_2007], where a value of less than five as indicated low multicollinearity between the predictors, values between five and ten moderate, and values greater than ten high and not tolerable [@jamesetal_IntroductionStatisticalLearning_2021].
 
